# SevenTV-to-Telegram

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: manual-sync.yml  nightly-sync.yml
scripts/: local_run.sh
src/app/: __init__.py  config.py  main.py
src/app/domain/: diff.py  models.py  planner.py
src/app/media/: animated_render.py  cache.py  static_render.py
src/app/providers/: seventv.py  telegram.py
src/app/services/: report_service.py  sync_service.py
tests/: test_config.py  test_desired_state_manifest.py  test_diff.py  test_media_render.py  test_planner.py  test_seventv_provider.py  test_sharding_and_naming.py  test_telegram_provider.py
